tests/baselines/reference/structWithPredefinedTypesAsNames2_basic.errors.txt
tests/cases/conformance/basicStructs/structDeclarations_basic/structWithPredefinedTypesAsNames2_basic.ts(3,8): error TS1003: Identifier expected.


==== tests/cases/conformance/basicStructs/structDeclarations_basic/structWithPredefinedTypesAsNames2_basic.ts (1 errors) ====
    // structs cannot use predefined types as names
    
    struct void {}
           ~~~~
!!! error TS1003: Identifier expected.